--- a/motion.html
+++ b/motion.html
@@ -105,7 +105,7 @@
   </section>
   <section class="py-8 px-4 sm:px-6 lg:px-8 lg:py-12">
     <div class="max-w-7xl mx-auto">
-      <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2">الأعمال المميزة</h2>
+      <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2 text-center">اخـــر مشاريعنــا</h2>
       <div class="space-y-6 lg:space-y-0 lg:grid lg:grid-cols-2 lg:gap-8 mb-12 lg:mb-16">
         <div
           class="group relative overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer mx-2 lg:mx-0"
