--- a/web.html
+++ b/web.html
@@ -105,92 +105,96 @@
     </section>
     <section class="py-8 px-4 sm:px-6 lg:px-8 lg:py-12">
         <div class="max-w-7xl mx-auto">
-            <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2">المشاريع المميزة</h2>
+            <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2">اخـــر مشاريعنــا</h2>
             <div class="space-y-6 lg:space-y-0 lg:grid lg:grid-cols-2 lg:gap-8 mb-12 lg:mb-16">
                 <div class="group relative overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 mx-2 lg:mx-0"
                     style="animation-delay: 0ms;">
-                    <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=800&amp;h=600&amp;fit=crop"
+                    <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden rounded-t-xl sm:rounded-t-xl">
+                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=800&amp;h=600&amp;fit=crop"
                             alt="منصة التجارة الإلكترونية"
-                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500"
+                            style="min-height: 160px;" />
                     </div>
                     <div
-                        class="absolute inset-0 bg-gradient-to-t from-agency-black/95 via-agency-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="absolute bottom-0 left-0 right-0 p-3 lg:p-8">
-                            <div class="text-xs lg:text-sm text-agency-green mb-1 lg:mb-2 font-medium">التجارة
+                        class="absolute inset-0 bg-gradient-to-t from-agency-black/95 via-agency-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col justify-end">
+                        <div class="absolute bottom-0 left-0 right-0 p-3 sm:p-4 lg:p-8">
+                            <div class="text-xs sm:text-sm lg:text-sm text-agency-green mb-1 sm:mb-2 lg:mb-2 font-medium">التجارة
                                 الإلكترونية</div>
-                            <h3 class="text-base lg:text-2xl font-bold text-white mb-1 lg:mb-3">منصة التجارة
+                            <h3 class="text-base sm:text-lg lg:text-2xl font-bold text-white mb-1 sm:mb-2 lg:mb-3">منصة التجارة
                                 الإلكترونية</h3>
-                            <p class="text-gray-300 text-xs lg:text-base mb-2 lg:mb-4 line-clamp-2 lg:line-clamp-none">
+                            <p class="text-gray-300 text-xs sm:text-sm lg:text-base mb-2 sm:mb-3 lg:mb-4 line-clamp-2 lg:line-clamp-none">
                                 حل شامل للتجارة الإلكترونية مع تكامل الدفع ولوحة تحكم الإدارة.</p>
-                            <div class="flex flex-wrap gap-1 lg:gap-2 mb-3 lg:mb-6"><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">React</span><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">Node.js</span><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">+2</span>
+                            <div class="flex flex-wrap gap-1 sm:gap-2 lg:gap-2 mb-3 sm:mb-4 lg:mb-6"><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">React</span><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">Node.js</span><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">+2</span>
                             </div>
-                            <div class="flex flex-col sm:flex-row gap-2 lg:gap-4"><a href="https://shopify.com"
+                            <div class="flex flex-row gap-2 w-full">
+                                <a href="https://shopify.com"
                                     target="_blank" rel="noopener noreferrer"
-                                    class="bg-agency-green text-white px-4 py-2 lg:px-6 lg:py-2 rounded-full hover:bg-agency-green/80 transition-colors font-medium text-center text-xs lg:text-base">زيارة
-                                    الموقع</a><a
-                                    class="border border-agency-beige text-agency-beige px-4 py-2 lg:px-6 lg:py-2 rounded-full hover:bg-agency-beige hover:text-agency-black transition-colors font-medium text-center text-xs lg:text-base"
-                                    href="/web-development">عرض التفاصيل</a></div>
+                                    class="bg-agency-green text-white px-4 py-2 sm:px-6 sm:py-2 rounded-full hover:bg-agency-green/80 transition-colors font-medium text-center text-xs sm:text-sm lg:text-base w-1/2">زيارة الموقع</a>
+                                <a class="border border-agency-beige text-agency-beige px-4 py-2 sm:px-6 sm:py-2 rounded-full hover:bg-agency-beige hover:text-agency-black transition-colors font-medium text-center text-xs sm:text-sm lg:text-base w-1/2"
+                                    href="/web-development">عرض التفاصيل</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="group relative overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 mx-2 lg:mx-0"
                     style="animation-delay: 200ms;">
-                    <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=800&amp;h=600&amp;fit=crop"
+                    <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden rounded-t-xl sm:rounded-t-xl">
+                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=800&amp;h=600&amp;fit=crop"
                             alt="لوحة تحكم البرمجيات كخدمة"
-                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500"
+                            style="min-height: 160px;" />
                     </div>
                     <div
-                        class="absolute inset-0 bg-gradient-to-t from-agency-black/95 via-agency-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="absolute bottom-0 left-0 right-0 p-3 lg:p-8">
-                            <div class="text-xs lg:text-sm text-agency-green mb-1 lg:mb-2 font-medium">البرمجيات
+                        class="absolute inset-0 bg-gradient-to-t from-agency-black/95 via-agency-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col justify-end">
+                        <div class="absolute bottom-0 left-0 right-0 p-3 sm:p-4 lg:p-8">
+                            <div class="text-xs sm:text-sm lg:text-sm text-agency-green mb-1 sm:mb-2 lg:mb-2 font-medium">البرمجيات
                                 كخدمة</div>
-                            <h3 class="text-base lg:text-2xl font-bold text-white mb-1 lg:mb-3">لوحة تحكم البرمجيات
+                            <h3 class="text-base sm:text-lg lg:text-2xl font-bold text-white mb-1 sm:mb-2 lg:mb-3">لوحة تحكم البرمجيات
                                 كخدمة</h3>
-                            <p class="text-gray-300 text-xs lg:text-base mb-2 lg:mb-4 line-clamp-2 lg:line-clamp-none">
+                            <p class="text-gray-300 text-xs sm:text-sm lg:text-base mb-2 sm:mb-3 lg:mb-4 line-clamp-2 lg:line-clamp-none">
                                 لوحة تحكم معقدة مع تحليلات في الوقت الفعلي وإدارة المستخدمين.</p>
-                            <div class="flex flex-wrap gap-1 lg:gap-2 mb-3 lg:mb-6"><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">Vue.js</span><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">Firebase</span><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">+2</span>
+                            <div class="flex flex-wrap gap-1 sm:gap-2 lg:gap-2 mb-3 sm:mb-4 lg:mb-6"><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">Vue.js</span><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">Firebase</span><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">+2</span>
                             </div>
-                            <div class="flex flex-col sm:flex-row gap-2 lg:gap-4"><a href="https://vercel.com"
+                            <div class="flex flex-row gap-2 w-full"><a href="https://vercel.com"
                                     target="_blank" rel="noopener noreferrer"
-                                    class="bg-agency-green text-white px-4 py-2 lg:px-6 lg:py-2 rounded-full hover:bg-agency-green/80 transition-colors font-medium text-center text-xs lg:text-base">زيارة
+                                    class="bg-agency-green text-white px-4 py-2 sm:px-6 sm:py-2 rounded-full hover:bg-agency-green/80 transition-colors font-medium text-center text-xs sm:text-sm lg:text-base w-1/2">زيارة
                                     الموقع</a><a
-                                    class="border border-agency-beige text-agency-beige px-4 py-2 lg:px-6 lg:py-2 rounded-full hover:bg-agency-beige hover:text-agency-black transition-colors font-medium text-center text-xs lg:text-base"
+                                    class="border border-agency-beige text-agency-beige px-4 py-2 sm:px-6 sm:py-2 rounded-full hover:bg-agency-beige hover:text-agency-black transition-colors font-medium text-center text-xs sm:text-sm lg:text-base w-1/2"
                                     href="/web-development">عرض التفاصيل</a></div>
                         </div>
                     </div>
                 </div>
                 <div class="group relative overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 mx-2 lg:mx-0"
                     style="animation-delay: 400ms;">
-                    <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=800&amp;h=600&amp;fit=crop"
+                    <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden rounded-t-xl sm:rounded-t-xl">
+                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=800&amp;h=600&amp;fit=crop"
                             alt="منصة التعلم"
-                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500"
+                            style="min-height: 160px;" />
                     </div>
                     <div
-                        class="absolute inset-0 bg-gradient-to-t from-agency-black/95 via-agency-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="absolute bottom-0 left-0 right-0 p-3 lg:p-8">
-                            <div class="text-xs lg:text-sm text-agency-green mb-1 lg:mb-2 font-medium">التعليم</div>
-                            <h3 class="text-base lg:text-2xl font-bold text-white mb-1 lg:mb-3">منصة التعلم</h3>
-                            <p class="text-gray-300 text-xs lg:text-base mb-2 lg:mb-4 line-clamp-2 lg:line-clamp-none">
+                        class="absolute inset-0 bg-gradient-to-t from-agency-black/95 via-agency-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col justify-end">
+                        <div class="absolute bottom-0 left-0 right-0 p-3 sm:p-4 lg:p-8">
+                            <div class="text-xs sm:text-sm lg:text-sm text-agency-green mb-1 sm:mb-2 lg:mb-2 font-medium">التعليم</div>
+                            <h3 class="text-base sm:text-lg lg:text-2xl font-bold text-white mb-1 sm:mb-2 lg:mb-3">منصة التعلم</h3>
+                            <p class="text-gray-300 text-xs sm:text-sm lg:text-base mb-2 sm:mb-3 lg:mb-4 line-clamp-2 lg:line-clamp-none">
                                 منصة تعلم عبر الإنترنت مع بث الفيديو وتتبع التقدم.</p>
-                            <div class="flex flex-wrap gap-1 lg:gap-2 mb-3 lg:mb-6"><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">Angular</span><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">Express.js</span><span
-                                    class="px-1.5 py-0.5 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs rounded-full">+2</span>
+                            <div class="flex flex-wrap gap-1 sm:gap-2 lg:gap-2 mb-3 sm:mb-4 lg:mb-6"><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">Angular</span><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">Express.js</span><span
+                                    class="px-1.5 py-0.5 sm:px-2 sm:py-1 lg:px-3 lg:py-1 bg-agency-beige/20 text-agency-beige text-xs sm:text-sm rounded-full">+2</span>
                             </div>
-                            <div class="flex flex-col sm:flex-row gap-2 lg:gap-4"><a href="https://coursera.org"
+                            <div class="flex flex-row gap-2 w-full"><a href="https://coursera.org"
                                     target="_blank" rel="noopener noreferrer"
-                                    class="bg-agency-green text-white px-4 py-2 lg:px-6 lg:py-2 rounded-full hover:bg-agency-green/80 transition-colors font-medium text-center text-xs lg:text-base">زيارة
+                                    class="bg-agency-green text-white px-4 py-2 sm:px-6 sm:py-2 rounded-full hover:bg-agency-green/80 transition-colors font-medium text-center text-xs sm:text-sm lg:text-base w-1/2">زيارة
                                     الموقع</a><a
-                                    class="border border-agency-beige text-agency-beige px-4 py-2 lg:px-6 lg:py-2 rounded-full hover:bg-agency-beige hover:text-agency-black transition-colors font-medium text-center text-xs lg:text-base"
+                                    class="border border-agency-beige text-agency-beige px-4 py-2 sm:px-6 sm:py-2 rounded-full hover:bg-agency-beige hover:text-agency-black transition-colors font-medium text-center text-xs sm:text-sm lg:text-base w-1/2"
                                     href="/web-development">عرض التفاصيل</a></div>
                         </div>
                     </div>
@@ -208,9 +212,6 @@
                 مشروع الويب</button>
         </div>
     </section>
-</body>
-
-</html>
 </body>
 
 </html>
