--- a/graphic.html
+++ b/graphic.html
@@ -111,7 +111,7 @@
     </section>
     <section class="py-8 px-4 sm:px-6 lg:px-8 lg:py-12">
         <div class="max-w-7xl mx-auto">
-            <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2">معرض الأعمال</h2>
+            <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2 text-center">اخـــر مشاريعنــا</h2>
             <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8">
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 0ms;">
