--- a/motion.html
+++ b/motion.html
@@ -199,9 +199,10 @@
       <h2 class="text-3xl md:text-4xl lg:text-5xl font-bold text-white mb-6 lg:mb-8 leading-tight">جاهز
         لتحريك<span class="block text-agency-beige">قصة علامتك التجارية؟</span></h2>
       <p class="text-lg lg:text-xl text-gray-300 mb-8 lg:mb-12 px-2">دعنا ننشئ رسوم متحركة جذابة تشرك جمهورك
-        وترفع من مستوى علامتك التجارية.</p><button
-        class="bg-gradient-to-r from-agency-beige to-agency-green text-agency-black px-8 py-3 lg:px-12 lg:py-4 rounded-full font-bold text-base lg:text-lg hover:scale-105 active:scale-95 transition-transform duration-300 hover:shadow-lg hover:shadow-agency-beige/30 w-full max-w-sm mx-auto">ابدأ
-        مشروع الرسوم المتحركة</button>
+        وترفع من مستوى علامتك التجارية.</p>
+        <a href="https://wa.me/967774769410" class="bg-gradient-to-r from-agency-green to-agency-beige text-white px-6 py-3 lg:px-12 lg:py-4 rounded-full font-bold text-sm lg:text-lg hover:scale-105 active:scale-95 transition-transform duration-300 hover:shadow-lg hover:shadow-agency-green/30 w-full max-w-xs mx-auto block text-center">
+          ابدأ مشروع الرسوم المتحركة
+        </a>
     </div>
   </section>
 </body>
