--- a/web.html
+++ b/web.html
@@ -207,9 +207,11 @@
             <h2 class="text-2xl md:text-3xl lg:text-5xl font-bold text-white mb-4 lg:mb-8 leading-tight px-2"><span
                     class="block mb-2">جاهز لبناء</span><span class="block text-agency-beige">موقع أحلامك؟</span></h2>
             <p class="text-base lg:text-xl text-gray-300 mb-6 lg:mb-12 px-4 leading-relaxed">دعنا ننشئ حضوراً قوياً
-                على الويب يحقق نتائج لأعمالك.</p><button
-                class="bg-gradient-to-r from-agency-green to-agency-beige text-white px-6 py-3 lg:px-12 lg:py-4 rounded-full font-bold text-sm lg:text-lg hover:scale-105 active:scale-95 transition-transform duration-300 hover:shadow-lg hover:shadow-agency-green/30 w-full max-w-xs mx-auto">ابدأ
-                مشروع الويب</button>
+                على الويب يحقق نتائج لأعمالك.
+            </p>
+            <a href="https://wa.me/967774769410" class="bg-gradient-to-r from-agency-green to-agency-beige text-white px-6 py-3 lg:px-12 lg:py-4 rounded-full font-bold text-sm lg:text-lg hover:scale-105 active:scale-95 transition-transform duration-300 hover:shadow-lg hover:shadow-agency-green/30 w-full max-w-xs mx-auto block text-center">
+                ابدأ مشروع الويب
+            </a>
         </div>
     </section>
 </body>
