inhance company logos section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
       type="image/x-icon"
     />
     <link href="https://imgur.com/SilMupg.png" rel="apple-touch-icon" />
+    <!-- Preload partner logos to improve performance -->
+    <link rel="preload" href="https://imgur.com/8OmicuT.png" as="image" />
+    <link rel="preload" href="https://imgur.com/R5MFW4W.png" as="image" />
+    <link rel="preload" href="https://imgur.com/ZX7UwtH.png" as="image" />
+    <link rel="preload" href="https://imgur.com/TFfgwgx.png" as="image" />
+    <link rel="preload" href="https://imgur.com/RYd8r1w.png" as="image" />
+    <link rel="preload" href="https://imgur.com/zJG3jI0.png" as="image" />
   </head>
   <body class="body">
     <div
@@ -419,149 +426,11 @@
         <div class="partners-scroll-container">
           <div class="partners-scroll-wrapper">
             <div class="images-container">
-              <!-- First set of logos -->
+              <!-- Partner logos will be loaded dynamically via JavaScript -->
+              <!-- Loading indicator while JavaScript loads the content -->
               <div class="service-company-contairner">
                 <img
                   src="https://imgur.com/8OmicuT.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="https://imgur.com/R5MFW4W.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="https://imgur.com/ZX7UwtH.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="https://imgur.com/TFfgwgx.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="https://imgur.com/RYd8r1w.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="https://imgur.com/zJG3jI0.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <!-- Second set of logos (duplicate) -->
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/izar-colorful.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/R2Z.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/myprofession.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/ahgaph.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/samlex.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/hospital.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <!-- Third set of logos (duplicate) -->
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/izar-colorful.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/R2Z.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/myprofession.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/ahgaph.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/samlex.png"
-                  loading="lazy"
-                  alt=""
-                  class="srvice-company-image"
-                />
-              </div>
-              <div class="service-company-contairner">
-                <img
-                  src="images/companies-images/hospital.png"
-                  loading="lazy"
                   alt=""
                   class="srvice-company-image"
                 />
