Use one font style

--- a/soon.html
+++ b/soon.html
@@ -21,6 +21,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="soon.css" />
+    <style>
+      body, html {
+        font-family: Arial, sans-serif !important;
+      }
+    </style>
   </head>
 
   <body>
