--- a/soon.html
+++ b/soon.html
@@ -16,16 +16,8 @@
     <title>Pixel - قريباً أعمالنا الجديدة</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&amp;display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="soon.css" />
-    <style>
-      body, html {
-        font-family: Arial, sans-serif !important;
-      }
-    </style>
+    
   </head>
 
   <body>
@@ -246,7 +238,7 @@
               <h1
                 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#c2b289] via-[#c2b289] to-[#34665a] mb-4 leading-tight animate-gradient"
               >
-                قريباً سيتم رفع أعمالنا
+                تـواصـــل مـعـنــا لمـشـاهـــدة أعـمـالـنـــا الـمـمـيــزة
               </h1>
               <div
                 class="absolute -inset-1 bg-gradient-to-r from-[#c2b289]/20 to-[#34665a]/20 blur-xl opacity-50 animate-pulse"
@@ -254,9 +246,9 @@
             </div>
             <div class="relative mb-16">
               <p
-                class="text-xl sm:text-2xl md:text-3xl text-gray-300 font-light leading-relaxed max-w-3xl mx-auto"
+                class="text-xl sm:text-2xl md:text-3xl text-gray-300 font-light leading-relaxed max-w-3xl mx-auto" style="font-family: Arial, sans-serif"
               >
-                نحن نعمل بجد لإنجاز مشاريع استثنائية ستدهشكم قريباً
+                نحن نعمل بجد لإنجاز مشاريع استثنائية وابداعية. تابعونا
               </p>
             </div>
             <div
@@ -284,7 +276,7 @@
                     <path d="M5 12h14"></path>
                     <path d="m12 5 7 7-7 7"></path>
                   </svg>
-                  الصفحة الرئيسية
+                  الصفحــة الرئيسية
                 </span>
                 <div
                   class="absolute inset-0 bg-gradient-to-r from-[#c2b289] to-[#34665a] transform scale-x-0 group-hover:scale-x-100 transition-transform duration-500 origin-right rounded-xl"
@@ -330,7 +322,7 @@
           style="left: 1418px; top: 1053px"
         ></div>
       </div>
-    </div>
+    </div>    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
