Ad conference page

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <h1 class="service-pixel-shap">⬛</h1>
           </div>
           <h1 class="service-desc">المعــــــــــارض والمؤتمــــــــــرات</h1>
-          <a href="soon.html" class="cssbuttons-io-button">
+          <a href="conference.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
