Add our motion, design and conference work

--- a/conference.html
+++ b/conference.html
@@ -87,11 +87,11 @@
     <section class="py-8 px-4 sm:px-6 lg:px-8 lg:py-12">
         <div class="max-w-7xl mx-auto">
             <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2 text-center">اعـمـالـنــا فــي الــمعارض والـمـؤتـمـــرات</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8">
+            <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-8">
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 0ms;">
-                    <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?w=800&amp;h=600&amp;fit=crop"
+                    <div class="aspect-[5/4] overflow-hidden"><img
+                            src="https://imgur.com/ZxFNuOY.png"
                             alt="تصميم هوية العلامة التجارية"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -119,7 +119,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 100ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/liaejBC.png"
                             alt="سلسلة الملصقات الإبداعية"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -146,7 +146,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 200ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/YZLeYdx.png"
                             alt="مجموعة الفن الرقمي"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -173,7 +173,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 300ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/26dost2.png"
                             alt="تصميم العبوات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -200,7 +200,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 400ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/moTzfMM.png"
                             alt="مجموعة الشعارات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -227,7 +227,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 500ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/AYA2jT0.png"
                             alt="التصميم التحريري"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
