--- a/graphic.html
+++ b/graphic.html
@@ -87,11 +87,11 @@
     <section class="py-8 px-4 sm:px-6 lg:px-8 lg:py-12">
         <div class="max-w-7xl mx-auto">
             <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2 text-center">اخـــر مشاريعنــا</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8">
+            <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-8">
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 0ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/WE772Rc.png"
                             alt="تصميم هوية العلامة التجارية"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -119,7 +119,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 100ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/SsnK4ih.png"
                             alt="سلسلة الملصقات الإبداعية"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -146,7 +146,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 200ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/WhB55LB.png"
                             alt="مجموعة الفن الرقمي"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -173,7 +173,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 300ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/uKI5YVa.png"
                             alt="تصميم العبوات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -200,7 +200,7 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 400ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/kmafboS.png"
                             alt="مجموعة الشعارات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
@@ -227,7 +227,62 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 500ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?w=800&amp;h=600&amp;fit=crop"
+                            src="https://imgur.com/64m42xu.png"
+                            alt="التصميم التحريري"
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                    </div>
+                    <div
+                        class="absolute inset-0 bg-gradient-to-t from-agency-black/90 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="absolute bottom-0 left-0 right-0 p-6">
+                            <div class="text-sm text-agency-beige mb-2">النشر</div>
+                            <h3 class="text-xl font-bold text-white mb-2">التصميم التحريري</h3>
+                            <p class="text-gray-300 text-sm">تخطيطات المجلات والكتب التي تعزز القابلية للقراءة.</p>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute top-4 right-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div
+                            class="w-10 h-10 bg-agency-beige/20 backdrop-blur-sm rounded-full flex items-center justify-center">
+                            <svg class="w-5 h-5 text-agency-beige" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
+                    style="animation-delay: 500ms;">
+                    <div class="aspect-[4/5] overflow-hidden"><img
+                            src="https://imgur.com/QXWgGeX.png"
+                            alt="التصميم التحريري"
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                    </div>
+                    <div
+                        class="absolute inset-0 bg-gradient-to-t from-agency-black/90 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="absolute bottom-0 left-0 right-0 p-6">
+                            <div class="text-sm text-agency-beige mb-2">النشر</div>
+                            <h3 class="text-xl font-bold text-white mb-2">التصميم التحريري</h3>
+                            <p class="text-gray-300 text-sm">تخطيطات المجلات والكتب التي تعزز القابلية للقراءة.</p>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute top-4 right-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div
+                            class="w-10 h-10 bg-agency-beige/20 backdrop-blur-sm rounded-full flex items-center justify-center">
+                            <svg class="w-5 h-5 text-agency-beige" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
+                    style="animation-delay: 500ms;">
+                    <div class="aspect-[4/5] overflow-hidden"><img
+                            src="https://imgur.com/ByoYpdq.png"
                             alt="التصميم التحريري"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
