--- a/motion.html
+++ b/motion.html
@@ -81,26 +81,22 @@
   <section class="py-8 px-4 sm:px-6 lg:px-8 lg:py-12">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-2xl lg:text-3xl font-bold text-agency-beige mb-6 lg:mb-8 px-2 text-center">اخـــر مشاريعنــا</h2>
-      <div class="space-y-6 lg:space-y-0 lg:grid lg:grid-cols-2 lg:gap-8 mb-12 lg:mb-16">
+      <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-8">
         <div
-          class="group relative overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer mx-2 lg:mx-0"
-          style="animation-delay: 0ms;">
-          <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden relative"><img
-              src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?w=800&amp;h=600&amp;fit=crop"
-              alt="بكرة الرسوم المتحركة للعلامة التجارية"
-              class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
-            <div
-              class="absolute inset-0 flex items-center justify-center bg-black/40 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-              <div
-                class="w-12 h-12 lg:w-16 lg:h-16 bg-agency-beige/90 rounded-full flex items-center justify-center backdrop-blur-sm hover:scale-110 transition-transform duration-200">
+          class="aspect-[3/3] group overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer mx-2 lg:mx-0"
+          style="animation-delay: 0ms;"
+            onclick="playVimeoVideo(this, 'https://player.vimeo.com/video/1100802277')">
+          <div class="overflow-hidden relative">
+            <div style="padding:56.25% 0 0 0;position:relative;">
+              <div class="video-thumbnail" style="position:absolute;top:0;left:0;width:100%;height:100%;background:url('https://vumbnail.com/1100802865.jpg') center center / cover no-repeat;cursor:pointer;"></div>
+            </div>
+            <div class="absolute inset-0 flex items-center justify-center bg-black/40 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+              <div class="w-12 h-12 lg:w-16 lg:h-16 bg-agency-beige/90 rounded-full flex items-center justify-center backdrop-blur-sm hover:scale-110 transition-transform duration-200">
                 <svg class="w-5 h-5 lg:w-6 lg:h-6 text-agency-black mr-1" fill="currentColor" viewBox="0 0 24 24">
                   <path d="M8 5v14l11-7z"></path>
                 </svg>
               </div>
             </div>
-            <div
-              class="absolute bottom-3 left-3 lg:bottom-4 lg:left-4 bg-agency-black/80 text-agency-beige px-2 py-1 lg:px-3 lg:py-1 rounded-full text-xs lg:text-sm font-medium">
-              0:45</div>
           </div>
           <div class="p-4 lg:p-8">
             <div class="text-xs lg:text-sm text-agency-green mb-1 lg:mb-2 font-medium">العلامة التجارية
@@ -112,59 +108,51 @@
           </div>
         </div>
         <div
-          class="group relative overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer mx-2 lg:mx-0"
-          style="animation-delay: 200ms;">
-          <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden relative"><img
-              src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?w=800&amp;h=600&amp;fit=crop"
-              alt="فيديو توضيحي للشركة"
-              class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
-            <div
-              class="absolute inset-0 flex items-center justify-center bg-black/40 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-              <div
-                class="w-12 h-12 lg:w-16 lg:h-16 bg-agency-beige/90 rounded-full flex items-center justify-center backdrop-blur-sm hover:scale-110 transition-transform duration-200">
+          class="aspect-[3/3] group overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer mx-2 lg:mx-0"
+          style="animation-delay: 0ms;"
+          onclick="playVimeoVideo(this, 'https://player.vimeo.com/video/1100802277')">
+          <div class="overflow-hidden relative">
+            <div style="padding:56.25% 0 0 0;position:relative;">
+              <div class="video-thumbnail" style="position:absolute;top:0;left:0;width:100%;height:100%;background:url('https://i.vimeocdn.com/video/2036126644-fef5beea159d6fbf3eac3eb0858aafdde188648cc06763a69375882542ec49d4-d_640x360?&region=us.jpg') center center / cover no-repeat;cursor:pointer;"></div>
+            </div>
+            <div class="absolute inset-0 flex items-center justify-center bg-black/40 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+              <div class="w-12 h-12 lg:w-16 lg:h-16 bg-agency-beige/90 rounded-full flex items-center justify-center backdrop-blur-sm hover:scale-110 transition-transform duration-200">
                 <svg class="w-5 h-5 lg:w-6 lg:h-6 text-agency-black mr-1" fill="currentColor" viewBox="0 0 24 24">
                   <path d="M8 5v14l11-7z"></path>
                 </svg>
               </div>
             </div>
-            <div
-              class="absolute bottom-3 left-3 lg:bottom-4 lg:left-4 bg-agency-black/80 text-agency-beige px-2 py-1 lg:px-3 lg:py-1 rounded-full text-xs lg:text-sm font-medium">
-              2:15</div>
           </div>
           <div class="p-4 lg:p-8">
-            <div class="text-xs lg:text-sm text-agency-green mb-1 lg:mb-2 font-medium">توضيحي</div>
-            <h3 class="text-lg lg:text-2xl font-bold text-white mb-2 lg:mb-3">فيديو توضيحي للشركة</h3>
-            <p class="text-gray-300 text-sm lg:text-base line-clamp-2">فيديو توضيحي متحرك يبسط المفاهيم
-              التجارية المعقدة.</p>
+            <div class="text-xs lg:text-sm text-agency-green mb-1 lg:mb-2 font-medium">راية المساكن</div>
+            <h3 class="text-lg lg:text-2xl font-bold text-white mb-2 lg:mb-3">فيديو راية المساكن</h3>
+            <p class="text-gray-300 text-sm lg:text-base line-clamp-2">فيديو موشن جرافيك لمشروع راية المساكن مع انتقالات وعناصر بصرية جذابة.</p>
           </div>
         </div>
         <div
-          class="group relative overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer mx-2 lg:mx-0"
-          style="animation-delay: 400ms;">
-          <div class="aspect-[16/9] lg:aspect-[16/10] overflow-hidden relative"><img
-              src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?w=800&amp;h=600&amp;fit=crop"
-              alt="رسوم متحركة للواجهة"
-              class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
-            <div
-              class="absolute inset-0 flex items-center justify-center bg-black/40 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-              <div
-                class="w-12 h-12 lg:w-16 lg:h-16 bg-agency-beige/90 rounded-full flex items-center justify-center backdrop-blur-sm hover:scale-110 transition-transform duration-200">
+          class="aspect-[3/3] group overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer mx-2 lg:mx-0"
+          style="animation-delay: 0ms;"
+          onclick="playVimeoVideo(this, 'https://player.vimeo.com/video/1100801247')">
+          <div class="overflow-hidden relative">
+            <div style="padding:56.25% 0 0 0;position:relative;">
+              <div class="video-thumbnail" style="position:absolute;top:0;left:0;width:100%;height:100%;background:url('https://i.vimeocdn.com/video/2036130697-3bca194ab95fab0170738609ca1f9d9cffb737fc57e6ff0a1cd5db96c1d176c1-d?mw=700&mh=395&quot;);.jpg') center center / cover no-repeat;cursor:pointer;"></div>
+            </div>
+            <div class="absolute inset-0 flex items-center justify-center bg-black/40 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+              <div class="w-12 h-12 lg:w-16 lg:h-16 bg-agency-beige/90 rounded-full flex items-center justify-center backdrop-blur-sm hover:scale-110 transition-transform duration-200">
                 <svg class="w-5 h-5 lg:w-6 lg:h-6 text-agency-black mr-1" fill="currentColor" viewBox="0 0 24 24">
                   <path d="M8 5v14l11-7z"></path>
                 </svg>
               </div>
             </div>
-            <div
-              class="absolute bottom-3 left-3 lg:bottom-4 lg:left-4 bg-agency-black/80 text-agency-beige px-2 py-1 lg:px-3 lg:py-1 rounded-full text-xs lg:text-sm font-medium">
-              1:05</div>
           </div>
           <div class="p-4 lg:p-8">
-            <div class="text-xs lg:text-sm text-agency-green mb-1 lg:mb-2 font-medium">واجهة المستخدم
-            </div>
-            <h3 class="text-lg lg:text-2xl font-bold text-white mb-2 lg:mb-3">رسوم متحركة للواجهة</h3>
-            <p class="text-gray-300 text-sm lg:text-base line-clamp-2">تفاعلات دقيقة ورسوم متحركة
-              للواجهة لتطبيقات الويب والهاتف المحمول.</p>
+            <div class="text-xs lg:text-sm text-agency-green mb-1 lg:mb-2 font-medium">اكس هاوس</div>
+            <h3 class="text-lg lg:text-2xl font-bold text-white mb-2 lg:mb-3">فيديو اكس هاوس</h3>
+            <p class="text-gray-300 text-sm lg:text-base line-clamp-2">فيديو موشن جرافيك لمشروع اكس هاوس مع انتقالات وعناصر بصرية جذابة.</p>
           </div>
+        </div>
+        
+        
         </div>
       </div>
     </div>
@@ -180,6 +168,36 @@
         </a>
     </div>
   </section>
+  <!-- Video Modal -->
+  <div id="videoModal" style="display:none;position:fixed;z-index:9999;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;">
+    <div style="position:relative;width:90vw;max-width:800px;max-height:90vh;display:flex;align-items:center;justify-content:center;">
+      <button onclick="closeVideoModal()" style="position:absolute;top:-40px;right:0;background:none;border:none;color:#fff;font-size:2rem;cursor:pointer;z-index:10001;">&times;</button>
+      <iframe id="modalVideoFrame" src="" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="width:100%;height:60vw;max-height:70vh;border-radius:16px;background:#000;"></iframe>
+    </div>
+  </div>
+  <script>
+    function playVimeoVideo(card, videoUrl) {
+      var modal = document.getElementById('videoModal');
+      var iframe = document.getElementById('modalVideoFrame');
+      if (modal && iframe) {
+        iframe.src = videoUrl + '?autoplay=1';
+        modal.style.display = 'flex';
+      }
+    }
+
+    function closeVideoModal() {
+      var modal = document.getElementById('videoModal');
+      var iframe = document.getElementById('modalVideoFrame');
+      if (modal && iframe) {
+        iframe.src = '';
+        modal.style.display = 'none';
+      }
+    }
+    // Optional: Close modal on ESC key
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'Escape') closeVideoModal();
+    });
+  </script>
 </body>
 
 </html>
