--- a/motion.html
+++ b/motion.html
@@ -85,7 +85,7 @@
         <div
           class="aspect-[3/3] group overflow-hidden rounded-xl lg:rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer mx-2 lg:mx-0"
           style="animation-delay: 0ms;"
-            onclick="playVimeoVideo(this, 'https://player.vimeo.com/video/1100802277')">
+            onclick="playVimeoVideo(this, 'https://player.vimeo.com/video/1100802865')">
           <div class="overflow-hidden relative">
             <div style="padding:56.25% 0 0 0;position:relative;">
               <div class="video-thumbnail" style="position:absolute;top:0;left:0;width:100%;height:100%;background:url('https://vumbnail.com/1100802865.jpg') center center / cover no-repeat;cursor:pointer;"></div>
@@ -170,10 +170,40 @@
   </section>
   <!-- Video Modal -->
   <div id="videoModal" style="display:none;position:fixed;z-index:9999;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;">
-    <div style="position:relative;width:90vw;max-width:800px;max-height:90vh;display:flex;align-items:center;justify-content:center;">
-      <button onclick="closeVideoModal()" style="position:absolute;top:-40px;right:0;background:none;border:none;color:#fff;font-size:2rem;cursor:pointer;z-index:10001;">&times;</button>
-      <iframe id="modalVideoFrame" src="" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="width:100%;height:60vw;max-height:70vh;border-radius:16px;background:#000;"></iframe>
+    <div style="position:relative;width:90vw;max-width:800px;height:70vh;max-height:90vh;display:flex;align-items:center;justify-content:center;">
+      <button onclick="closeVideoModal()" id="closeModalBtn" aria-label="Close video" style="position:absolute;top:12px;right:12px;background:rgba(0,0,0,0.7);border:none;color:#fff;font-size:2.5rem;line-height:1;width:48px;height:48px;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;z-index:10001;box-shadow:0 2px 8px rgba(0,0,0,0.2);transition:background 0.2s;">
+        &times;
+      </button>
+      <iframe id="modalVideoFrame" src="" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="width:100vw;height:70vh;max-width:100vw;max-height:80vh;border-radius:16px;background:#000;"></iframe>
     </div>
+    <style>
+      @media (max-width: 600px) {
+        #videoModal > div {
+          width: 100vw !important;
+          height: 100vh !important;
+          max-width: 100vw !important;
+          max-height: 100vh !important;
+        }
+        #modalVideoFrame {
+          width: 100vw !important;
+          height: 100vh !important;
+          max-width: 100vw !important;
+          max-height: 100vh !important;
+          border-radius: 0 !important;
+        }
+        #closeModalBtn {
+          top: 12px !important;
+          right: 12px !important;
+          width: 40px !important;
+          height: 40px !important;
+          font-size: 2rem !important;
+        }
+      }
+      #closeModalBtn:hover {
+        background: rgba(255,255,255,0.2);
+        color: #ff5252;
+      }
+    </style>
   </div>
   <script>
     function playVimeoVideo(card, videoUrl) {
