Edit two service titles

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <h1 class="service-pixel-shap">⬛</h1>
           </div>
           <h1 class="service-desc">
-            تصميــــــم وترويـــــــج<br />الحملات الاعلانيــــــــــة
+            تصميــــــم وترويـــــــج<br />حملات السوشـال ميديا
           </h1>
           <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
@@ -361,7 +361,7 @@
             <h1 class="service-pixel-shap leftside">⬛</h1>
             <h1 class="service-pixel-shap">⬛</h1>
           </div>
-          <h1 class="service-desc">التسويــــــــــق الالكترونــــــــــي</h1>
+          <h1 class="service-desc">التسويــق الالكترونـــي وادارة المحتــوى الرقمــي</h1>
           <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
