Add meta tags for search engin

--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://webflow.com -->
-<!-- Last Published: Sat Mar 22 2025 14:08:12 GMT+0000 (Coordinated Universal Time) -->
   <head>
     <script src="script.js"></script>
     <meta charset="utf-8" />
-    <title>Pixel</title>
+    <title>Pixel | بكسل - وكالة تصميم وتطوير رقمي</title>
+    <meta name="description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
+    <meta name="keywords" content="بكسل, تصميم, تسويق, وكالة, هوية بصرية, تسويق الكتروني, موشن جرافيك, تطوير مواقع, حملات اعلانية, branding, marketing, digital agency, pixel" />
+    <meta name="author" content="Pixel Agency" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Pixel | بكسل - وكالة تصميم وتسويق رقمي" />
+    <meta property="og:description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
+    <meta property="og:image" content="https://imgur.com/SilMupg.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pixel-site.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pixel | بكسل - وكالة تصميم وتسويق رقمي" />
+    <meta name="twitter:description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
+    <meta name="twitter:image" content="https://imgur.com/SilMupg.png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link rel="canonical" href="https://pixel-site.vercel.app/" />
     <link href="main.css" rel="stylesheet" type="text/css" />
     <link
       href="https://imgur.com/SilMupg.png"
       rel="shortcut icon"
       type="image/x-icon"
     />
-    
     <link href="https://imgur.com/SilMupg.png" rel="apple-touch-icon" />
     <!-- Preload partner logos to improve performance -->
     <link rel="preload" href="https://imgur.com/8OmicuT.png" as="image" />
@@ -21,6 +32,28 @@
     <link rel="preload" href="https://imgur.com/TFfgwgx.png" as="image" />
     <link rel="preload" href="https://imgur.com/RYd8r1w.png" as="image" />
     <link rel="preload" href="https://imgur.com/zJG3jI0.png" as="image" />
+    <!-- Schema.org JSON-LD for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Pixel Agency | وكالة بكسل",
+        "url": "https://pixel-site.vercel.app/",
+        "logo": "https://imgur.com/SilMupg.png",
+        "description": "وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية.",
+        "sameAs": [
+          "https://www.instagram.com/pixelagency23/",
+          "https://x.com/pixelagency23?t=peANAf6Tm53NtmaaETljlA&s=09"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+967774769410",
+          "contactType": "customer service",
+          "areaServed": "YE",
+          "availableLanguage": ["Arabic", "English"]
+        }
+      }
+    </script>
   </head>
   <body class="body">
     <div
