--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="twitter:image" content="https://imgur.com/SilMupg.png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="canonical" href="https://pixel-site.vercel.app/" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <link href="main.css" rel="stylesheet" type="text/css" />
     <link
       href="https://imgur.com/SilMupg.png"
