--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="script.js"></script>
     <meta charset="utf-8" />
     <title>Pixel | بكسل - وكالة تصميم وتطوير رقمي</title>
+    <!-- Google Site Verification tag will be added here after getting the code from Search Console -->
     <meta name="description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
     <meta name="keywords" content="بكسل, تصميم, تسويق, وكالة, هوية بصرية, تسويق الكتروني, موشن جرافيك, تطوير مواقع, حملات اعلانية, branding, marketing, digital agency, pixel" />
     <meta name="author" content="Pixel Agency" />
@@ -11,13 +12,13 @@
     <meta property="og:description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
     <meta property="og:image" content="https://imgur.com/SilMupg.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pixel-site.vercel.app/" />
+    <meta property="og:url" content="https://pixel23.xyz/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Pixel | بكسل - وكالة تصميم وتسويق رقمي" />
     <meta name="twitter:description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
     <meta name="twitter:image" content="https://imgur.com/SilMupg.png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="canonical" href="https://pixel-site.vercel.app/" />
+    <link rel="canonical" href="https://pixel23.xyz/" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <link href="main.css" rel="stylesheet" type="text/css" />
     <link
@@ -39,7 +40,7 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Pixel Agency | وكالة بكسل",
-        "url": "https://pixel-site.vercel.app/",
+        "url": "https://pixel23.xyz/",
         "logo": "https://imgur.com/SilMupg.png",
         "description": "وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية.",
         "sameAs": [
