Add verification code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="script.js"></script>
     <meta charset="utf-8" />
     <title>Pixel | بكسل - وكالة تصميم وتطوير رقمي</title>
-    <!-- Google Site Verification tag will be added here after getting the code from Search Console -->
+    <meta name="google-site-verification" content="lPPx_-pfyUuux1EPBbfyyoyYvO8S3-Vg4CgrhWNB_6k" />
     <meta name="description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
     <meta name="keywords" content="بكسل, تصميم, تسويق, وكالة, هوية بصرية, تسويق الكتروني, موشن جرافيك, تطوير مواقع, حملات اعلانية, branding, marketing, digital agency, pixel" />
     <meta name="author" content="Pixel Agency" />
